Finished ccs and frittata pages, added home link

--- a/recipes/creamcheesesquares.html
+++ b/recipes/creamcheesesquares.html
@@ -6,6 +6,34 @@
     <title>Cream Cheese Squares</title>
 </head>
 <body>
-<h1>"Cream Cheese Squares"</h1>
+    <h1>Cream Cheese Squares</h1>
+  
+    <img src="../images/cream-cheese-squares.jpg">
+
+    <h2>Nutrition Facts</h2>
+    <p>213 calories per serving (24); protein 2.8g; carbohydrates 18.4g; fat 14.2g; cholesterol 20.5mg; sodium 245.8mg. </p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 (8oz) cans refrigerated crescent roll dough</li>
+        <li>2 (8oz) packages cream cheese</li>
+        <li>1 cup white sugar</li>
+        <li>1 teaspoon vanilla extract</li>
+        <li>1/2 cup margarine, melted</li>
+        <li>1/4 cup white sugar</li>
+        <li>1 teaspoon ground cinnamon</li>
+    </ul>
+    <h2>Directions</h2>
+    <ol>
+        <li>Preheat oven to <em>350 degrees</em> fahrenheit and grease a 9x13in pan</li>
+        <li>Press one can of dough into the bottom of the pan</li>
+        <li>In a medium bowl, mix together cream cheese, sugar and vanilla until smooth. Spread over the dough layer</li>
+        <li>Unroll the second can of dough and lay it on top of the cream cheese layer <em>DO NOT PRESS DOWN</em></li>
+        <li>Pour the melted margarine, 1/4 cup sugar and cinnamon over the pan</li>
+        <li>Bake for 25-30 minutes</li>
+    </ol>
+    <p1>
+        <a href="file:///home/nategr54/the_odin_project/odin-recipes-2/index.html">Home</a>
+    </p1>
 </body>
 </html>
