--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/creamcheesesquares.html">CCS</a>
+    <ul>
+        <li><a href="recipes/creamcheesesquares.html">Cream Cheese Squares</a></li>
+        <li><a href="recipes/frittata.html">Frittatas</a></li>
+    </ul>    
 </body>
 </html>
