added final recipe page, alt text to images

--- a/recipes/creamcheesesquares.html
+++ b/recipes/creamcheesesquares.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Cream Cheese Squares</h1>
   
-    <img src="../images/cream-cheese-squares.jpg">
+    <img src="../images/cream-cheese-squares.jpg" alt="Dessert">
 
     <h2>Nutrition Facts</h2>
     <p>213 calories per serving (24); protein 2.8g; carbohydrates 18.4g; fat 14.2g; cholesterol 20.5mg; sodium 245.8mg. </p>
