--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="images/homeimage.png" alt="5 star dish" style="width:400px; height:400px">
     <ul>
         <li><a href="recipes/creamcheesesquares.html">Cream Cheese Squares</a></li>
         <li><a href="recipes/frittata.html">Frittatas</a></li>
+        <li><a href="recipes/broccoli.html">Steamed Broccoli</a></li>
     </ul>    
 </body>
 </html>
