--- a/recipes/frittata.html
+++ b/recipes/frittata.html
@@ -7,7 +7,7 @@
 
 <body>
     <h1>Frittata</h1>
-    <img src="../images/frittatas.jpg">
+    <img src="../images/frittatas.jpg" alt="main course">
     <h2>Nutrition Facts</h2>
         <p> 470 calories per serving (8); protein 18.8g; carbohydrates 12.1g; fat 39.2g; cholesterol 233.6mg; sodium 789.5mg</p>
     <h2>Ingredients</h2>
