added initial css from foundations lesson to all pages

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Recipes Project</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <img src="images/homeimage.png" alt="5 star dish" style="width:400px; height:400px">
-    <ul>
-        <li><a href="recipes/creamcheesesquares.html">Cream Cheese Squares</a></li>
-        <li><a href="recipes/frittata.html">Frittatas</a></li>
-        <li><a href="recipes/broccoli.html">Steamed Broccoli</a></li>
+    <img src="images/homeimage.png" alt="5 star dish">
+    <ul class="homelist">
+        <li class="homelist"><a href="recipes/creamcheesesquares.html">Cream Cheese Squares</a></li>
+        <li class="homelist"><a href="recipes/frittata.html">Frittatas</a></li>
+        <li class="homelist"><a href="recipes/broccoli.html">Steamed Broccoli</a></li>
     </ul>    
 </body>
 </html>
