--- a/recipes/broccoli.html
+++ b/recipes/broccoli.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Steamed Broccoli</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Steamed Broccoli</h1>
@@ -23,6 +24,8 @@
             <li>Mix steamed broccoli, bacon, butter, salt, and pepper together in a bowl</li>
             <li><strong><em>EAT</em></strong></li>
         </ol>
-    <a href="file:///home/nategr54/the_odin_project/odin-recipes-2/index.html">Home</a>
+    <p1>
+        <button><a href="file:///home/nategr54/the_odin_project/odin-recipes-2/index.html">Home</a></button>
+    </p1>
 </body>
 </html>
