--- a/recipes/creamcheesesquares.html
+++ b/recipes/creamcheesesquares.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
     <title>Cream Cheese Squares</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Cream Cheese Squares</h1>
@@ -33,7 +33,7 @@
         <li>Bake for 25-30 minutes</li>
     </ol>
     <p1>
-        <a href="file:///home/nategr54/the_odin_project/odin-recipes-2/index.html">Home</a>
+        <button><a href="file:///home/nategr54/the_odin_project/odin-recipes-2/index.html">Home</a></button>
     </p1>
 </body>
 </html>
